--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo build"
+    "build": "expo build",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "^49.0.0",
