--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
     "types": ["expo"],
     "lib": ["es2015", "dom"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "navigation/**/*", "app/**/*"],
   "exclude": ["node_modules"]
 }
