chore: add jest setup files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "types": ["expo"],
+    "types": ["expo", "jest"],
     "lib": ["es2015", "dom"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "navigation/**/*", "app/**/*"],
   "exclude": ["node_modules"]
 }
