--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "react-native-web": "0.19.10"
   },
   "devDependencies": {
-    "@testing-library/react-native": "^12.4.0",
-    "@testing-library/jest-native": "^5.7.0",
-    "@babel/core": "^7.27.1",
-    "@types/jest": "^29.5.2",
-    "babel-jest": "^29.7.0",
+    "@testing-library/react-native": "12.2.0",
+    "@testing-library/jest-native": "5.7.0",
+    "babel-jest": "29.7.0",
     "jest-expo": "^49.0.0",
-    "react-test-renderer": "^18.2.0",
+    "react-test-renderer": "18.2.0",
     "typescript": "^5.0.4"
   }
 }
