--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo build",
-    "test": "jest-expo"
+    "build": "eas build",
+    "test": "jest"
   },
   "dependencies": {
     "expo": "^49.0.0",
@@ -17,13 +17,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-web": "0.19.10",
-     "jest-expo": "^49.0.0"
+    "react-native-web": "0.19.10"
   },
   "devDependencies": {
+    "jest-expo": "^49.0.0",
     "@testing-library/react-native": "12.2.0",
     "@testing-library/jest-native": "5.4.2",
     "babel-jest": "29.7.0",
+    "jest": "29.7.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.0.4"
   }
