--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.4",
-    "react-native-web": "0.19.10"
+    "react-native-web": "0.19.10",
+    "react-native-safe-area-context": "^4.7.0",
+    "react-native-screens": "^3.29.0",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.12"
   },
   "devDependencies": {
     "jest": "29.7.0",
