Configure Expo with Firebase authentication
Set up Memory Capsule app to run natively with Expo, including:
- Firebase integration with environment variable support
- Authentication service with AsyncStorage persistence
- Hybrid configuration for multiple environments
- Enhanced error handling and loading states
- Updated package dependencies and configuration files
- Improved .gitignore for Expo and Firebase projects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,22 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "types": ["expo", "jest"],
-    "lib": ["es2015", "dom"]
+    "types": [
+      "expo",
+      "jest"
+    ],
+    "lib": [
+      "es2015",
+      "dom"
+    ]
   },
-  "include": ["src/**/*", "navigation/**/*", "app/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "src/**/*",
+    "navigation/**/*",
+    "app/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ],
+  "extends": "expo/tsconfig.base"
 }
