--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,46 @@
+# Node.js dependencies
 node_modules/
+
+# Expo
 .expo/
 .expo-shared/
+dist/
+web-build/
+
+# Environment variables
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Build outputs
 *.log
 dist/
 build/
+web-build/
+
+# Firebase
+.firebase/
+.firebaserc
+firebase-debug.log
 
 # macOS
 .DS_Store
+
+# Testing
+coverage/
+
+# Temporary files
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+
+# Metro
+.metro-health-check*
+
+# Local Netlify folder
+.netlify
