--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "memory-capsule",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,16 +11,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/auth": "^22.2.0",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react": "~18.2.14",
+    "dotenv": "^16.5.0",
     "expo": "^49.0.0",
-    "expo-status-bar": "^1.0.0",
+    "expo-constants": "~14.4.2",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
-    "react-native-safe-area-context": "^4.7.0",
-    "react-native-screens": "^3.29.0",
+    "react-native": "0.72.10",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-web": "0.19.10"
   },
   "devDependencies": {
