--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "build": "eas build",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write .",
+    "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
