--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,22 +10,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "types": [
-      "expo",
-      "jest"
-    ],
-    "lib": [
-      "es2015",
-      "dom"
-    ]
+    "strict": true,
+    "types": ["expo", "jest"],
+    "lib": ["es2015", "dom"]
   },
   "include": [
     "src/**/*",
     "navigation/**/*",
-    "app/**/*"
+    "app/**/*",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ],
-  "exclude": [
-    "node_modules"
-  ],
+  "typeRoots": ["./node_modules/@types", "./src/types"],
+  "exclude": ["node_modules"],
   "extends": "expo/tsconfig.base"
 }
