feat: implement auth screens and media components with gradient UI elements

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ EXPO_PUBLIC_FIREBASE_STORAGE_BUCKET=memory-capsule-codex.firebasestorage.app
 EXPO_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=660630380757
 EXPO_PUBLIC_FIREBASE_APP_ID=1:660630380757:web:4280b1fbf1243ca0dc425c
 EXPO_PUBLIC_FIREBASE_MEASUREMENT_ID=G-CY6S95F9EN
+# Google OAuth Configuration
+EXPO_PUBLIC_GOOGLE_CLIENT_ID=660630380757-8lbivkmrva08alcja5ngrunv4pnsns7p.apps.googleusercontent.com
+# Additional OAuth redirect URIs for development
+EXPO_PUBLIC_GOOGLE_REDIRECT_URI=https://auth.expo.io/@memoria/@memory-capsule-codex
