--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-firebase/firestore": "^22.2.0",
     "@react-native-firebase/storage": "^22.2.0",
+    "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.7",
@@ -29,6 +31,7 @@
     "expo-av": "^15.1.4",
     "expo-constants": "~14.4.2",
     "expo-image-picker": "^16.1.4",
+    "expo-linear-gradient": "^14.1.4",
     "expo-linking": "~5.0.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.3.1",
@@ -42,7 +45,8 @@
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "0.19.10",
-    "@expo/webpack-config": "^19.0.0"
+    "expo-auth-session": "~5.0.2",
+    "expo-crypto": "~12.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-native": "5.4.2",
