--- a/package.json
+++ b/package.json
@@ -15,46 +15,50 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@firebase/auth": "^1.10.6",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-firebase/app": "^22.2.0",
     "@react-native-firebase/auth": "^22.2.0",
     "@react-native-firebase/firestore": "^22.2.0",
     "@react-native-firebase/storage": "^22.2.0",
-    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.12",
-    "@types/react": "~18.2.14",
+    "@types/react": "~19.0.10",
     "dotenv": "^16.5.0",
-    "expo": "^49.0.0",
-    "expo-av": "^15.1.4",
-    "expo-constants": "~14.4.2",
-    "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "^14.1.4",
-    "expo-linking": "~5.0.2",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^53.0.9",
+    "expo-audio": "^0.4.5",
+    "expo-auth-session": "~6.1.5",
+    "expo-av": "~15.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-linking": "~7.1.5",
+    "expo-status-bar": "~2.2.3",
+    "expo-video": "~2.1.9",
     "firebase": "^10.3.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.56.4",
-    "react-native": "0.72.10",
+    "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "0.19.10",
-    "expo-auth-session": "~5.0.2",
-    "expo-crypto": "~12.4.1"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react-native": "12.2.0",
     "babel-jest": "29.7.0",
     "jest": "29.7.0",
-    "jest-expo": "^49.0.0",
-    "react-test-renderer": "18.2.0",
+    "jest-expo": "~53.0.5",
+    "react-test-renderer": "^19.0.0",
     "typescript": "^5.0.4"
   }
 }
