--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "build": "eas build",
     "test": "jest",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --write .",
-    "test:ci": "jest --ci --coverage"
+    "test:ci": "jest --ci --coverage",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.0",
     "@firebase/auth": "^1.10.6",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-firebase/app": "^22.2.0",
-    "@react-native-firebase/auth": "^22.2.0",
-    "@react-native-firebase/firestore": "^22.2.0",
-    "@react-native-firebase/storage": "^22.2.0",
+    "@react-native-async-storage/async-storage": "^1.23.0",
+    "@react-native-firebase/app": "22.1.0",
+    "@react-native-firebase/auth": "22.1.0",
+    "@react-native-firebase/firestore": "22.1.0",
+    "@react-native-firebase/storage": "22.1.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -32,6 +32,7 @@
     "expo-audio": "^0.4.5",
     "expo-auth-session": "~6.1.5",
     "expo-av": "~15.1.4",
+    "expo-build-properties": "^0.14.6",
     "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.4",
@@ -58,7 +59,8 @@
     "babel-jest": "29.7.0",
     "jest": "29.7.0",
     "jest-expo": "~53.0.5",
-    "react-test-renderer": "^19.0.0",
+    "patch-package": "^8.0.0",
+    "react-test-renderer": "19.0.0",
     "typescript": "^5.0.4"
   }
 }
