--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
     "web": {
     },
     "plugins": [
+      "expo-dev-client",
       "expo-camera",
       "expo-image-picker",
       "expo-av",
