--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@firebase/auth": "^1.10.6",
     "@react-native-async-storage/async-storage": "^1.23.0",
-    "@react-native-firebase/app": "22.1.0",
-    "@react-native-firebase/auth": "22.1.0",
-    "@react-native-firebase/firestore": "22.1.0",
-    "@react-native-firebase/storage": "22.1.0",
+    "@react-native-firebase/app": "^22.1.0",
+    "@react-native-firebase/auth": "^22.1.0",
+    "@react-native-firebase/firestore": "^22.1.0",
+    "@react-native-firebase/storage": "^22.1.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -41,7 +40,6 @@
     "expo-linking": "~7.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-video": "~2.1.9",
-    "firebase": "^10.3.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.56.4",
@@ -51,15 +49,18 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0"
+    "react-native-web": "^0.20.0",
+    "expo-dev-client": "~5.2.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react-native": "12.2.0",
+    "@types/react-native": "^0.72.8",
     "babel-jest": "29.7.0",
     "jest": "29.7.0",
     "jest-expo": "~53.0.5",
     "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react-test-renderer": "19.0.0",
     "typescript": "^5.0.4"
   }
