--- a/package.json
+++ b/package.json
@@ -16,10 +16,6 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.0",
-    "@react-native-firebase/app": "^22.1.0",
-    "@react-native-firebase/auth": "^22.1.0",
-    "@react-native-firebase/firestore": "^22.1.0",
-    "@react-native-firebase/storage": "^22.1.0",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/material-top-tabs": "^6.6.14",
@@ -35,6 +31,7 @@
     "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.6",
     "expo-crypto": "~14.1.4",
+    "expo-dev-client": "~5.2.0",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
@@ -49,13 +46,14 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.20.0",
-    "expo-dev-client": "~5.2.0"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@testing-library/jest-native": "5.4.2",
     "@testing-library/react-native": "12.2.0",
     "@types/react-native": "^0.72.8",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
     "babel-jest": "29.7.0",
     "jest": "29.7.0",
     "jest-expo": "~53.0.5",
