fix: Resolve Firebase init, stack overflow, and tsconfig errors
- Corrected Firebase app initialization in firebase.ts.
- Refined isLoading state management in AuthContext to prevent re-render loops.
- Updated useEffect dependency in DashboardScreen from 'user' object to 'user?.uid'.
- Fixed function scoping for renderCategoryItem and getCurrentGreeting in DashboardScreen.
- Removed syntax error (extraneous return and brace) in DashboardScreen.
- Updated tsconfig.json moduleResolution to 'bundler' to resolve customConditions error.

--- a/app.json
+++ b/app.json
@@ -19,7 +19,8 @@
     },
     "android": {
       "backgroundColor": "#FFFFFF",
-      "package": "com.memoriafilms.memorycapsule"
+      "package": "com.memoriafilms.memorycapsule",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
     },
