--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "expo-dev-client": "~5.2.0"
+    "expo-dev-client": "~5.2.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-native": "5.4.2",
