--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "platforms": ["ios", "android", "web"],
     "orientation": "portrait",
+    "icon": "./assets/icon.png",
     "backgroundColor": "#ffffff",
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -18,6 +19,10 @@
       "bundleIdentifier": "com.memoriafilms.memorycapsule"
     },
     "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/icon.png",
+        "backgroundColor": "#42275a"
+      },
       "backgroundColor": "#FFFFFF",
       "package": "com.memoriafilms.memorycapsule",
       "googleServicesFile": "./google-services.json"
