--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
